# agPixel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
agPixel/: CMakeLists.txt
agPixel/cmake/: Core.hpp.in
agPixel/include/: Core.hpp  Pixel.hpp
agPixel/include/Pixel/: BPixel.hpp  DPixel.hpp  FPixel.hpp  Pixel.hpp
agPixel/src/Pixel/: BPixel.cpp  DPixel.cpp  FPixel.cpp
cmake/: AVX2.cpp  SSE2.cpp  TestAVX2.cmake  TestSSE2.cmake
include/: Array.hpp  Core.hpp  Math.hpp  PackedMath.hpp  Pixel.h  Pixel.hpp  PixelCore.hpp  PixelDouble.hpp  PixelFloat.h  PixelFloat.hpp  PixelInt.h  PixelInt.hpp  PixelMath.hpp  PixelPackedMath.hpp
include/Array/: Double.hpp  Float.hpp  Int.hpp
include/Math/: PixelMath.hpp  PixelMathAVX.hpp  PixelMathRegular.hpp  PixelPackedMath.hpp  PixelPackedMathAVX.hpp  Quad.hpp
include/Pixel/: Double.hpp  Float.hpp  Int.hpp
src/: Math.cpp  PackedMath.cpp  PixelDouble.cpp  PixelFloat.cpp  PixelInt.cpp  PixelMath.cpp  PixelPackedMath.cpp
src/Array/: Double.cpp  Float.cpp  Int.cpp
src/Math/: Math.cpp  MathAVX.cpp  MathSSE.cpp  PackedMath.cpp  PackedMathAVX.cpp  PackedMathSSE.cpp  PixelMath.cpp  PixelMathAVX.cpp  PixelMathRegular.cpp  PixelMathSSE.cpp  PixelPackedMath.cpp  PixelPackedMathAVX.cpp  PixelPackedMathSSE.cpp
src/Pixel/: Double.cpp  Float.cpp  Int.cpp
tests/: AVXTest.cpp  SSETest.cpp
